# STK_search

./: .coveragerc  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  README.md  README.rst  index.rst  justfile  mkdocs.yml  my.script  pip_install_cmd.txt  pyproject.toml  requirements.txt  ruff_output.txt  setup.cfg  setup.py
Example_notebooks/: 00_load_database_to_mongodb.ipynb  0_generate_building_blocks.ipynb  1_initialise_search_space.ipynb  2_run_search_exp.ipynb  3_run_search_benchmark.ipynb  4_learn_molecules_representation.ipynb  5_calculate_constructed_molecules_property.ipynb  6_run_exploration_of_full_space.ipynb  7_retrain_model_learning.ipynb  8_test_acquisition_function.ipynb  Test_MFBO.ipynb  benchmark_slurm_script2.sh  load_search_dict.py  nohup.out  plot_benchmark_output.py  readme.rst  rerun_benchmark.py  run_benchmark.py  run_benchmark_slurm.py  test_EA.py  test_SUEA.py  test_random.py
Example_notebooks/figures/: modify_figure.py
data/: df_SP.xlsx
data_example/fragment/: fragementclean_1005.txt
docs/: 404.html  README.md  conf.py  index.rst  requirements.txt  search.html
docs/source/: conf.py  index copy.md  index.rst  modules.rst  usage.rst
docsmd/: README.md  _config.yml
notebook/: objective_function_test.ipynb  plot_2d_representations.ipynb
notebooks/: Analyse_searched_space.ipynb  Benchmark_search_exp.ipynb  GNN_tests.ipynb  Generate_slatm.ipynb  Test_Graph_networkx.ipynb  initialise_search_space_new.ipynb  morgan_fp_represenation.ipynb  plot_exp_results.ipynb  running_calculations.ipynb  test_mol2vec.ipynb  test_run_benchmark.ipynb  test_search.ipynb  testing_search_algo.ipynb  train_encoder_slatm.ipynb
site/: 404.html  index.html  search.html
tests/: conftest.py  test_objective_functions.py  test_seachspace.py  test_search_exp.py  test_skeleton.py
(+905 files in other folders)
