[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stk_search"
maintainers = [
  { name = "Mohammed Azzouzi", email = "mohammed.azzouzi15@ic.ac.uk" },
]

dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "torch == 2.3.0", 
  "botorch",
  "gpytorch",
  "stko",
  "stk",
  "scikit-learn",
  "rdkit",
  "ipywidgets",
  "psutil",
  "pytorch-lightning",
  "torchmetrics",  
  "ase",
  "packaging",
  "e3nn",
  "transformers",
  "selfies",
  "atom3d",
  "cffi",
  "biopython",
  "cython",
  "networkx",
  "ogb",
  "ipykernel",
  "torch_geometric",
  "lightning",
  "mordred",
  "wandb",
  "swifter",
]
requires-python = ">=3.7"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "build",
  "twine",
  "furo",
  "types-psutil",
  "sphinx-rtd-theme==1.3.0rc1",
]

[project.urls]
github = "https://github.com/mohammedazzouzi15/stk_search"
documentation = "https://stk_search.readthedocs.io"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
extend-select = ["I"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN101", "ANN401", "COM812", "ISC001","ANN001","ANN201","E501","ANN204","W"]
extend-unsafe-fixes = ["N"]
[tool.black]
line-length = 79

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "qml.*"
]
ignore_missing_imports = true
